order/k8sconfig/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: order-deployment
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: order-service
  template: 
    metadata: 
      labels: 
        app: order-service
    spec: 
      containers: 
        - 
          image: "order:latest"
          name: order-ms
          ports: 
            - 
              containerPort: 8080
          imagePullPolicy: Never
