order/k8sconfig/order-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    service: order-service
  name: order-service
spec: 
  ports: 
    - 
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: order-service
  type: NodePort
