order/k8sconfig/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: order-ingress
spec: 
  rules: 
    - 
      host: teste.dev
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: order-service
                port: 
                  number: 8080
            path: /order
            pathType: Prefix
